[package]
name = "rs-examples"
version = "0.1.0"
description = "Some simple programs written as demonstration in rust."
repository = "https://github.com/santifa/rs-examples.git"
authors = ["Henrik Jürges <juerges.henrik@gmail.com>"]
license-file = "LICENSE"
publish = false

[dependencies]
# framebuffer dependencies
libc = "~0.2"
chrono = "~0.4"
flate2 = { version = "~1.0", features = ["zlib"], default-features = false }